# LocalChat

./: Cargo.toml  README.md
src/: crypto.rs  history.rs  main.rs  server.rs  ui.rs
